🎨 Add NEO.FLOWOFF logo integration
- Added maskable-512.png as favicon and app icon
- Integrated logo in chat header with hover effects
- Added proper image serving route in server.js
- Enhanced visual identity with branded logo
- Added theme color and apple-touch-icon support
- Improved header layout with logo and text alignment

--- a/public/embed.html
+++ b/public/embed.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEO.FLOWOFF - Agente IA</title>
+    <link rel="icon" type="image/png" href="/images/maskable-512.png">
+    <link rel="apple-touch-icon" href="/images/maskable-512.png">
+    <meta name="theme-color" content="#667eea">
     <style>
         * {
             margin: 0;
@@ -44,14 +47,33 @@
             text-align: center;
         }
 
-        .chat-header h1 {
-            font-size: 18px;
-            margin-bottom: 5px;
+        .header-content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
         }
 
-        .chat-header p {
+        .logo {
+            border-radius: 50%;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            transition: transform 0.3s ease;
+        }
+
+        .logo:hover {
+            transform: scale(1.05);
+        }
+
+        .header-text h1 {
+            font-size: 18px;
+            margin: 0 0 5px 0;
+            font-weight: 700;
+        }
+
+        .header-text p {
             font-size: 14px;
             opacity: 0.9;
+            margin: 0;
         }
 
         .chat-messages {
@@ -209,8 +231,13 @@
 <body>
     <main class="chat-container" role="main" tabindex="0" aria-label="Chat do Agente NEO.FLOWOFF">
         <header class="chat-header" role="banner">
-            <h1>🤖 NEO.FLOWOFF</h1>
-            <p>Seu assistente inteligente</p>
+            <div class="header-content">
+                <img src="/images/maskable-512.png" alt="NEO.FLOWOFF Logo" class="logo" width="40" height="40">
+                <div class="header-text">
+                    <h1>NEO.FLOWOFF</h1>
+                    <p>Seu assistente inteligente</p>
+                </div>
+            </div>
         </header>
         
         <section class="chat-messages" id="chatMessages" role="log" aria-live="polite" aria-label="Mensagens do chat">
