🎯 Add desktop detection and redirect page
- Created desktop.html with provocative design and mobile-first messaging
- Added desktop detection logic in embed.html (width > 768px or non-mobile user agent)
- Implemented auto-redirect with countdown timer (10s) and cancel option
- Added QR code generation for mobile access
- Enhanced visual design with particles animation and glassmorphism effects
- Added mobile preview mockup showing how it should look
- Updated server.js and vercel.json to serve desktop route
- Transformed limitation into engaging first impression with NEO.FLOWOFF branding

--- a/public/embed.html
+++ b/public/embed.html
@@ -397,9 +397,24 @@
             }
         }
 
+        // Detectar desktop e redirecionar
+        function detectDesktop() {
+            const isDesktop = window.innerWidth > 768 || 
+                             (!navigator.userAgent.match(/Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i));
+            
+            if (isDesktop) {
+                window.location.href = '/desktop.html';
+                return true;
+            }
+            return false;
+        }
+
         // Inicializar o chat quando a página carregar
         document.addEventListener('DOMContentLoaded', () => {
-            new NeoChat();
+            // Só inicializar se não for desktop
+            if (!detectDesktop()) {
+                new NeoChat();
+            }
         });
     </script>
 </body>
