🔧 Fix image path and Vercel configuration
- Updated image references to use /public/maskable-512.webp
- Fixed vercel.json routes to properly serve public folder
- Added specific route for /public/* files
- Resolved Vercel build warning about unused settings

--- a/public/embed.html
+++ b/public/embed.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEO.FLOWOFF - Agente IA</title>
-    <link rel="icon" type="image/webp" href="/maskable-512.webp">
-    <link rel="apple-touch-icon" href="/maskable-512.webp">
+    <link rel="icon" type="image/webp" href="/public/maskable-512.webp">
+    <link rel="apple-touch-icon" href="/public/maskable-512.webp">
     <meta name="theme-color" content="#667eea">
     <style>
         * {
@@ -232,7 +232,7 @@
     <main class="chat-container" role="main" tabindex="0" aria-label="Chat do Agente NEO.FLOWOFF">
         <header class="chat-header" role="banner">
             <div class="header-content">
-                <img src="/maskable-512.webp" alt="NEO.FLOWOFF Logo" class="logo" width="40" height="40">
+                <img src="/public/maskable-512.webp" alt="NEO.FLOWOFF Logo" class="logo" width="40" height="40">
                 <div class="header-text">
                     <h1>NEO.FLOWOFF</h1>
                     <p>Seu assistente inteligente</p>
